# Armstrong-IDE

./: .cproject  .project  CMakeLists.txt  README  README.devel
src/: CMakeLists.txt  Editor.cpp  Editor.h  EditorArea.cpp  EditorArea.h  EditorFactory.cpp  EditorFactory.h  IEditor.h  IEditorArea.h  IEditorFactory.h  IProvider.h  Iterable.h  about.ui  armstrong_ide2.ui  main.cc  testcases.cpp  ui-shell.cc  ui-shell.h
